{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 9,
  "lineage": "e0b16d6b-b53d-510e-3cdf-210c197b5292",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw-cmrs-app-01",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:585008058878:internet-gateway/igw-0c5441e4e72f23600",
            "id": "igw-0c5441e4e72f23600",
            "owner_id": "585008058878",
            "tags": {
              "Environment": "dev",
              "Name": "igw-cmrs-app-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "igw-cmrs-app-01"
            },
            "vpc_id": "vpc-0a05b784fbe377081"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rt-cmrs-app-01",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:585008058878:route-table/rtb-02d3a9cc7baaf7379",
            "id": "rtb-02d3a9cc7baaf7379",
            "owner_id": "585008058878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5441e4e72f23600",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rt-cmrs-app-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rt-cmrs-app-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a05b784fbe377081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "assoc-cmrs-app-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d7302719e9caac",
            "route_table_id": "rtb-02d3a9cc7baaf7379",
            "subnet_id": "subnet-05d85adf76fcf0470"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.route_table.aws_route_table.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "assoc-cmrs-app-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4021efa422717cc",
            "route_table_id": "rtb-02d3a9cc7baaf7379",
            "subnet_id": "subnet-040ceb11154991975"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.route_table.aws_route_table.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sgrp--cmrs-app-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:585008058878:security-group/sg-0f142d27ba9f2551e",
            "description": "Security group of CMRS Apps",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f142d27ba9f2551e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sgrp-cmrs-app-01",
            "name_prefix": "",
            "owner_id": "585008058878",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "dev",
              "Name": "sgrp--cmrs-app-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sgrp--cmrs-app-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a05b784fbe377081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-cmrs-app-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:585008058878:subnet/subnet-05d85adf76fcf0470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d85adf76fcf0470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585008058878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-cmrs-app-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-cmrs-app-01"
            },
            "vpc_id": "vpc-0a05b784fbe377081"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet-cmrs-app-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:585008058878:subnet/subnet-040ceb11154991975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040ceb11154991975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585008058878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-cmrs-app-02"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-cmrs-app-02"
            },
            "vpc_id": "vpc-0a05b784fbe377081"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-cmrs-app-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:585008058878:vpc/vpc-0a05b784fbe377081",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06712317b0d4ec2d0",
            "default_route_table_id": "rtb-0fc564361119c3533",
            "default_security_group_id": "sg-088d16c9c1c48ed4d",
            "dhcp_options_id": "dopt-0daf45bf384f3313b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a05b784fbe377081",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc564361119c3533",
            "owner_id": "585008058878",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-cmrs-app-01"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-cmrs-app-01"
            }
          }
        }
      ]
    }
  ]
}